deploy/kubernetes/production/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    service: tomcat7
  name: tomcat7-lb
  namespace: production
spec:
  selector:
    app: tomcat7
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  type: LoadBalancer
